--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			<div class="left-nav">
 				<img src="https://www.boltiot.com/hubfs/TechnoShots/assignment/coffee-logo.png" id="hd-img">
-				<span class="nav-text" id="img-title">Coffee Shop</span>
+				<span class="nav-text" id="img-title">Steamy Cups</span>
 			</div>
 			<div class="right-nav">
 				<a href="#hme">Home</a>
@@ -46,7 +46,7 @@
 							<div class="ab-lg-cd cd">
 								<h2>About Us</h2>
 								<p>
-									At Cofee Shop, we are passionate about delivering the finest coffee experience to
+									At Steamy Cups, we are passionate about delivering the finest coffee experience to
 									our
 									customers. With a rich history and a commitment to quality, we strive to provide a
 									warm
@@ -75,7 +75,7 @@
 									Whether you're seeking a cozy spot to relax with a book or need a quick pick-me-up
 									on
 									your
-									way to work, Cofee Shop is here to serve you. We invite you to join us on this
+									way to work, Steamy Cups is here to serve you. We invite you to join us on this
 									coffee
 									adventure and savor the rich flavors, inviting aromas, and warm camaraderie that our
 									coffee
@@ -182,41 +182,43 @@
 			</div>
 		</div>
 	</div>
-	<!--footer class="footer">
-		<div class="container">
-		  <div class="footer-content">
-			<div class="footer-section about">
-			  <h3 class="footer-heading">About Us</h3>
-			  <p class="footer-text">Indulge in the art of coffee craftsmanship at [Coffee Shop Name]. We strive to bring you the finest coffee experience, from ethically sourced beans to expertly crafted beverages.</p>
+	<footer class="footer">
+		<div class="ft-container">
+			<div class="footer-content">
+				<div class="footer-section about">
+					<h3 class="footer-heading">About Us</h3>
+					<p class="footer-text">Indulge in the art of coffee craftsmanship at Steamy Cups. We strive to bring
+						you the finest coffee experience, from ethically sourced beans to expertly crafted beverages.
+					</p>
+				</div>
+				<div class="footer-section contact">
+					<h3 class="footer-heading">Contact Us</h3>
+					<ul class="contact-list">
+						<li><i class="fas fa-map-marker-alt"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, exercitationem.</li>
+						<li><i class="fas fa-phone"></i> +91 87********</li>
+						<li><i class="fas fa-envelope"></i> SteamyCups@gmail.com</li>
+					</ul>
+				</div>
+				<div class="footer-section opening-hours">
+					<h3 class="footer-heading">Opening Hours</h3>
+					<ul class="hours-list">
+						<li><span>Monday - Friday:</span> 7:00 AM - 7:00 PM</li>
+						<li><span>Saturday:</span> 8:00 AM - 6:00 PM</li>
+						<li><span>Sunday:</span> 9:00 AM - 5:00 PM</li>
+					</ul>
+				</div>
 			</div>
-			<div class="footer-section contact">
-			  <h3 class="footer-heading">Contact Us</h3>
-			  <ul class="contact-list">
-				<li><i class="fas fa-map-marker-alt"></i> [Coffee Shop Address]</li>
-				<li><i class="fas fa-phone"></i> [Coffee Shop Phone Number]</li>
-				<li><i class="fas fa-envelope"></i> [Coffee Shop Email]</li>
-			  </ul>
+			<div class="footer-bottom">
+				<p class="footer-text">&copy; 2023 Steamy Cups. All rights reserved.</p>
+				<div class="social-media">
+					<a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+					<a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+					<a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+					<a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+				</div>
 			</div>
-			<div class="footer-section opening-hours">
-			  <h3 class="footer-heading">Opening Hours</h3>
-			  <ul class="hours-list">
-				<li><span>Monday - Friday:</span> 7:00 AM - 7:00 PM</li>
-				<li><span>Saturday:</span> 8:00 AM - 6:00 PM</li>
-				<li><span>Sunday:</span> 9:00 AM - 5:00 PM</li>
-			  </ul>
-			</div>
-		  </div>
-		  <div class="footer-bottom">
-			<p class="footer-text">&copy; 2023 [Coffee Shop Name]. All rights reserved.</p>
-			<div class="social-media">
-			  <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-			  <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-			  <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-			  <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-			</div>
-		  </div>
 		</div>
-	  </footer-->
+	</footer>
 	<script src="script.js"></script>
 </body>
 
